# slot-data-gen

./: .gitignore  README.md  README.ru.md  generate.py  pyproject.toml
examples/: demo.ipynb
slot_data_gen/: __init__.py  io.py  judge.py  model.py  parse.py  pipeline.py  prompts.py
